# robotics-foundations

./: CMakeLists.txt  README.md  main.cpp
robotic_cpp/include/: Vector3D.h
robotic_cpp/src/: Vector3D.cpp
week1_vectors/: main  vector2.cpp  vector2.h  vector2d.cpp
